tests/paczka1/small_fuzzy/16963171.err
Error in line 1: xaLS A467 43,2
Error in line 7: QxLOfp A467 37,3
Error in line 8: QxLOfp A377 17,5
